...
          tabBarButtonTestID: "tab-etkinliklerim",
        }}
      />
      <AppTabs.Screen
        name="ProfilTab"
        component={ProfileHomeScreen}
        options={{ title: "Profil", tabBarButtonTestID: "tab-profil" }}
      />
    </AppTabs.Navigator>
  );
}

function AppNavigator() {
...
